--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <base href="/assets/apps/com.hemato.medical/0.0.1/">
+  <base href="/assets/apps/com.covid19.medics/0.0.1/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
