--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,11 @@
   <meta charset="utf-8">
   <title></title>
   <base href="/assets/apps/com.covid19-es.medics/0.0.1/">
-  <meta http-equiv="Cache-Control" content="max-age=0, must-revalidate, no-cache">
+  <meta http-equiv="Cache-Control" content="max-age=0, must-revalidate">
+  <meta http-equiv="Cache-Control" content="no-cache">
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0" >
+  <meta http-equiv="Expires" content="Tue, 01 Jan 1980 1:00:00 GMT">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="./assets/fontawesome/css/fontawesome-all.min.css">
