--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,13 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <base href="/assets/apps/com.hemato.medical/0.0.1/">
+  <base href="/assets/apps/com.covid19-TV-es.medics/0.0.1/">
   <meta http-equiv="Cache-Control" content="max-age=0, must-revalidate, no-cache">
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0" >
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="./assets/fontawesome/css/fontawesome-all.min.css">
+  <link rel="stylesheet" href="./assets/fontawesome/css/all.min.css">
 </head>
 <body>
 <app-root></app-root>
