change base href url

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <base href="/assets/apps/com.covid19-TV-es.medics/0.0.1/">
+  <base href="">
   <meta http-equiv="Cache-Control" content="max-age=0, must-revalidate, no-cache">
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Expires" content="0" >
